# agents-use-cases

./: .gitignore  README.md  pyproject.toml
src/: discussion_team.py  financial_advisor_agent.py
src/permacultr_agent/: README.md  docker-compose.yml  knowledge_base.py  permacultr_agent.py
